--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.11", features = ["derive"] }
+reqwest = { version = "0.12.5", features = ["blocking"] }
+anyhow = "1.0.86"
+serde_json = "1.0.121"
