--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 clap = { version = "4.5.11", features = ["derive"] }
 reqwest = { version = "0.12.5", features = ["blocking"] }
 anyhow = "1.0.86"
+serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
