--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ anyhow = "1.0.86"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
 terminal-link = "0.1.0"
-stylish = { version = "0.1.0", features = ["ansi"] }
+colored = "2.1.0"
