--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
 terminal-link = "0.1.0"
 colored = "2.1.0"
+regex = "1.10.6"
