--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ serde_json = "1.0.121"
 terminal-link = "0.1.0"
 colored = "2.1.0"
 regex = "1.10.6"
+rustyline = "14.0.0"
+
+[features]
+default = ["with-file-history"]
+with-file-history = []
