--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ serde_json = "1.0.121"
 terminal-link = "0.1.0"
 colored = "2.1.0"
 regex = "1.10.6"
-rustyline = "14.0.0"
+reedline = "0.33.0"
+nu-ansi-term = "0.50.1"
 
-[features]
-default = ["with-file-history"]
-with-file-history = []
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+lto = true
