--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ colored = "2.1.0"
 regex = "1.10.6"
 reedline = "0.33.0"
 nu-ansi-term = "0.50.1"
+shlex = "1.3.0"
 
 [profile.release]
 strip = true  # Automatically strip symbols from the binary.
